--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="col-lg-4 mb-4">
                     <div class="photo-container">
-                        <img src="/img/profile.jpg" alt="Your Photo" class="img-fluid rounded-circle shadow-lg">
+                        <img src="img/profile.jpg" alt="Your Photo" class="img-fluid rounded-circle shadow-lg">
                     </div>
                 </div>
                 <div class="col-lg-8">
